opti: 优化初始化和卸载逻辑.